# neural_networks_from_scratch

./: CMakeLists.txt  MNIST_Data_Generator.py  MNIST_data_generator_2_tensorflow.py  README
data/: single_image.csv  single_image_1.csv  single_image_10.csv  single_image_2.csv  single_image_3.csv  single_image_4.csv  single_image_5.csv  single_image_6.csv  single_image_7.csv  single_image_8.csv  single_image_9.csv
data2/: single_image_label_0_9.csv  single_image_label_1_1.csv  single_image_label_2_4.csv  single_image_label_2_8.csv  single_image_label_5_7.csv  single_image_label_6_10.csv  single_image_label_6_2.csv  single_image_label_8_3.csv  single_image_label_8_5.csv  single_image_label_8_6.csv
include/: Activations.h  Layer.h  Losses.h  MLP.h  Optimizer.h  Utilities.h
src/: Activations.cpp  Layer.cpp  Losses.cpp  MLP.cpp  Optimizer.cpp  Utilities.cpp  main_predict.cpp  main_train.cpp
